# aiogram-template

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  config.yaml.example  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
app/: __init__.py  __main__.py  bot.py  config.py
app/filters/: __init__.py  is_reply.py
app/handlers/: __init__.py  core.py  errors.py  start.py
app/handlers/private/: __init__.py  core.py
app/middlewares/: __init__.py  throttling.py
app/misc/: __init__.py  commands.py  confgen.py  config.py  helper.py  modular.py
bot/: __main__.py
bot/data/: .env.dist  config.py
bot/filters/: __init__.py  is_reply.py
bot/handlers/general/: __init__.py  base.py  errors.py
bot/middlewares/: __init__.py  throttling.py
bot/misc/: __init__.py  bot_instance.py  set_commands.py
bot/misc/keyboards/: __init__.py  source_markup.py
