[tool.poetry]
name = "Template"
version = "0.5.2"
description = "An aiogram template written in aiogram."
authors = ["Daniil Fedotov <comictomcat@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^2.11.2"
PyYAML = "^5.4.1"
rich = "^9.10.0"
black = "^20.8b1"
isort = "^5.7.0"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"