[tool.poetry]
name = "Template"
version = "0.7.0"
description = "An aiogram template."
authors = ["Daniil Fedotov <comictomcat@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^2.12.1"
PyYAML = "^5.4.1"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.8.0"
flake8 = "^3.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"